samples/_failures_safe/1761337554_abadb3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e7c53ff9.c: In function ‘process_state’:
./samples/SAFE/__tmp_e7c53ff9.c:164:17: error: expected expression at end of input
  164 |                 calc->error_code =
      |                 ^~~~
./samples/SAFE/__tmp_e7c53ff9.c:164:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7c53ff9.c:164:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7c53ff9.c:164:17: error: expected declaration or statement at end of input
